# pxit

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  README.md  Setup.bat
demos/: demo_00.cpp
include/: Platform.h  pxit.h
include/Core/: buffer.h
include/GL/: glext.h  wglext.h
include/Macros/: Architecture.h  Compiler.h  Compilers.h  OperatingSystem.h  OperatingSystems.h
include/OpenGL/: GLES30.h  GLES32.h  README
include/OpenGL/GLES3/: gl32.h
include/X11/: README.md  X.h  Xatom.h  Xdefs.h  Xlib.h  Xosdefs.h  Xutil.h  keysymdef.h
include/X11/extensions/: Xrender.h  render.h
include/pxit/: pxit.h
include/pxit/core/: display.h  surface.h  window.h
source/: pxit.c
src/: CMakeLists.txt  main.Any.c  main.GLES.c  main.GLES3.c  main.Win32.c  main.X11.c  main.c  main.cpp  main_linux.c  main_windows.c
src/OpenGL/: CMakeLists.txt  GLES31.c  GLES32.c  OpenGL_WGL.c
src/OpenGL/include/: OpenGL_WGL.h
src/OpenGL/include/GLES2/: gl20.h
src/OpenGL/include/GLES3/: gl31.h
src/OpenGL/src/: GLES20.c  OpenGL_WGL.c
src/bk/: bk_main_00.c  bk_main_01.c  bk_main_02.c  main.GLES.c  pxit_core_window.c
src/bk/OpenGL/: GLES20.h  GLES30.c  GLES31.h  OpenGL_WGL.c
src/bk/OpenGL/GLES3/: gl30.h
src/bk/core/: gl20.c  gl30.c  gl31.c  gl32.c  gles.c  gles.h  glx_module.h  glx_window.h  private.h  wgl_module.c  wgl_window.c  win32_module.c  win32_module.h  win32_window.c  win32_window.h  window.c  x11_window.c  x11_window.h
src/core/: CMakeLists.txt  assert.h  display.c  glx_module.c  glx_module.h  glx_window.c  glx_window.h  library.h  module.h  module_gles.c  module_gles.h  module_glx.c  module_glx.h  module_wgl.c  module_wgl.h  module_win32.c  module_win32.h  module_x11.c  module_x11.h  private.h  public.h  surface.c  surface.h  surface_win32.c  surface_win32.h  surface_x11.c  surface_x11.h  wgl_module.c  wgl_module.h  wgl_window.c  wgl_window.h  win32_module.c  win32_module.h  win32_window.c  win32_window.h  window.c  window.h  window_win32.c  window_win32.h  window_x11.c  (+5 more)
src/core/GLES/: module.c  module.h
src/core/GLES3/: library.c  library.h
src/core/GLX/: library.c  library.h  module.c  module.h
src/core/Linux/GLX/: module.c  module.h
src/core/Linux/X11/: module.h  window.h
src/core/WGL/: library.c  library.h  module.c  module.h
src/core/Win32/: module.c  module.h  window.c  window.h  window_wgl.c
src/core/X11/: library.c  library.h  module.c  module.h  window.c  window.h
src/core/linux/: libGLX.c  libGLX.h  libX11.c  libX11.h
src/core/linux/libGLX/: LICENSE  glx.h
src/core/linux/libX11/: LICENSE  X.h  Xatom.h  Xlib.h  Xutil.h  keysym.h  keysymdef.h
src/core/opengl/: gles.c  gles.h  gles30.c  gles31.c
src/core/windows/: api.h  d3d9.c  d3d9.h  dlls.h  dxgi.c  dxgi.h  gdi32.c  gdi32.h  kernel32.h  opengl32.c  opengl32.h  user32.c  user32.h
src/core/windows/api/: d3dukmdt.h  dxgi.h  dxgi1_2.h  dxgi1_3.h  dxgi1_4.h  dxgi1_5.h  dxgi1_6.h  dxgicommon.h  dxgiddi.h  dxgidebug.h  dxgiformat.h  dxgitype.h  gdi32.c  gdi32.h  opengl32.c  user32.h
src/core/windows/dlls/: kernel32.h  opengl32.h  user32.c
src/platform/: CMakeLists.txt
src/platform/GLX/: library.c  library.h
src/platform/WaylandClient/: library.c  library.h
src/platform/Win32/: context.c  context.h  window.c  window.h
src/platform/X11/: context.c  context.h  library.c  library.h  window.c  window.h
src/platform/generic/: library.h
